added new changes

--- a/AWS-Books/ML-Sagemaker-Cook-Book/Getting-Started.ipynb
+++ b/AWS-Books/ML-Sagemaker-Cook-Book/Getting-Started.ipynb
@@ -147,7 +147,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### When running training jobs, SageMaker launches new instances outside of the Jupyter notebook instance you are using. These instances are dedicated to running the training jobs and are automatically destroyed after the training jobs have been completed. The number of training job instances used depends on the instance_count argument, and the size and type of the instances depend on the instance_type argument. That said, when the fit() function is called in a later step with this current configuration in the Estimator, SageMaker provisions a single ml.m5.xlarge instance to run the Linear Learner built-algorithm and store the results to output_path."
+    "#### When running training jobs, SageMaker launches new instances outside of the Jupyter notebook instance you are using. These instances are dedicated to running the training jobs and are automatically destroyed after the training jobs have been completed. The number of training job instances used depends on the instance_count argument, and the size and type of the instances depend on the instance_type argument. That said, when the fit() function is called in a later step with this current configuration in the Estimator, SageMaker provisions a single ml.m5.xlarge instance to run the Linear Learner built-algorithm and store the results to output_path.\n",
+    "\n",
+    "#### Note that this is one of the ways to initialize an Estimator object and configure training jobs. Another option would be to use the LinearLearner class, which abstracts the container image used when running the training job. We have decided to use the Estimator class in this chapter so that we will have a chance to show that a training job requires a (1) container image, (2) a training dataset, (3) hyperparameters, and (4) a few other configuration values to execute. "
    ]
   },
   {
