added new changes

--- a/AWS-Books/ML-Sagemaker-Cook-Book/Getting-Started.ipynb
+++ b/AWS-Books/ML-Sagemaker-Cook-Book/Getting-Started.ipynb
@@ -153,9 +153,145 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "estimator.set_hyperparameters(predictor_type='regressor', mini_batch_size=4)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Hyperparameters are parameter-like values that can be tweaked and configured before the training jobs are executed. The configurable hyperparameter values depend on the algorithm used and, in this case, where we are using the Linear Learner built-in algorithm, we are setting the predictor_type and mini_batch_size hyperparameters.\n",
+    "\n",
+    "#### Given that we are dealing with a relatively small training dataset (14 records), we have set the mini_batch_size value to 4. For regression problems, the predictor_type argument should be set to 'regressor', and for classification problems, the predictor_type argument is set to either 'binary_classifier' or 'multiclass_classifier' depending on the number of classes. Each built-in algorithm has its own set of valid hyperparameters and values, so be sure to check the official AWS documentation. As you get more familiar with the built-in algorithms and how they work internally, you will have a better feel for how to modify and tweak these hyperparameters.\n",
+    "\n",
+    "#### Execute the training job using the fit() function. This runs the training job by provisioning the servers, running the algorithm on those servers, and then terminating the servers after. As this happens, log messages will be displayed in your notebook to update you on the status of the training job:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "estimator.fit({'train': train})\n",
+    "model_data = estimator.model_data\n",
+    "\n",
+    "model_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Use the %store magic to store the value of model_data so that we can use this in the Loading a linear learner model with Apache MXNet in Python and Deploying your first model in Python recipes:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_uri = estimator.image_uri\n",
+    "\n",
+    "%store model_uri\n",
+    "\n",
+    "%store X_test\n",
+    "\n",
+    "%store y_test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Train-test split: The recipe started with the train-test split, which divided the dataset from the CSV file into the training and test datasets. Ideally, we should perform this step twice so that we will have the training and validation datasets for the model training phase. This way, we can evaluate the model using the test dataset, which was not used for training.\n",
+    "\n",
+    "#### Saving and uploading the training dataset to S3: The next step after splitting the dataset is to make sure that the data is formatted properly. Here, we ensured that the first column of the CSV file contains the target value for things to work correctly. The training data is uploaded to Amazon S3 as it is the default source where the training data needs to be uploaded before running the SageMaker training jobs. We used the text/csv content type in this recipe, but we also have the option to use other content types, such as application/x-recordio-protobuf for the Linear Learner built-in algorithm. Using this allows us to use the optimized protobuf recordIO format during the training step and also take advantage of Pipe mode, which improves training job start times for larger datasets.\n",
+    "\n",
+    "#### Training: Once the training data has been uploaded to S3, the Estimator object is initialized and configured before starting the training job. The Estimator is simply a high-level interface that allows developers to initialize and configure training jobs with different parameters. Once the training job is complete, the model.tar.gz model file is uploaded to the target S3 bucket.\n",
+    "\n",
+    "\n",
+    "- The hyperparameters, location of the training input and output files, and other arguments and configuration options specified using the SageMaker Python SDK are passed as parameters to the SageMaker API when using the fit() function.\n",
+    "\n",
+    "- ML instances are provisioned by SageMaker and the algorithm container image is pulled and started inside the ML instances. The containers have access to the files that SageMaker has downloaded, including the input files and other configuration options (for example, hyperparameters.json).\n",
+    "\n",
+    "- Once the training job has been completed, the output files stored in (/opt/ml/model) are automatically uploaded by SageMaker to the target S3 destination."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.rcParams[\"figure.figsize\"] = (8,8)\n",
+    "\n",
+    "plt.scatter(\n",
+    "\n",
+    "    df_all_data.management_experience_months,  \n",
+    "\n",
+    "    df_all_data.monthly_salary\n",
+    "\n",
+    ")\n",
+    "\n",
+    "r_line = regression_line_df\n",
+    "\n",
+    "plt.plot(r_line['management_experience_months'],  \n",
+    "\n",
+    "         r_line['monthly_salary'],\n",
+    "\n",
+    "         color='red',\n",
+    "\n",
+    "         linewidth=3)\n",
+    "\n",
+    "plt.xlabel('Management Experience (Months)', fontsize=18)\n",
+    "\n",
+    "plt.ylabel('Monthly Salary (USD)', fontsize=16)\n",
+    "\n",
+    "plt.xlim(0, 120)\n",
+    "\n",
+    "plt.ylim(0, 2400)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import metrics\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "df_test_data = pd.DataFrame({\n",
+    "\n",
+    "    'monthly_salary': y_test,\n",
+    "\n",
+    "    'management_experience_months': X_test\n",
+    "\n",
+    "})\n",
+    "\n",
+    "df_test_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.sqrt(metrics.mean_squared_error(df_test_data['monthly_salary'], test_pred))\n",
+    "\n",
+    "metrics.mean_squared_error(df_test_data['monthly_salary'], test_pred)\n",
+    "\n",
+    "metrics.mean_absolute_error(df_test_data['monthly_salary'], test_pred)"
+   ]
   }
  ],
  "metadata": {
