added new changes

--- a/AWS-Books/ML-Sagemaker-Cook-Book/Getting-Started.ipynb
+++ b/AWS-Books/ML-Sagemaker-Cook-Book/Getting-Started.ipynb
@@ -292,6 +292,34 @@
     "\n",
     "metrics.mean_absolute_error(df_test_data['monthly_salary'], test_pred)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### When dealing with significantly larger datasets, we can use SageMaker Processing so that we can use dedicated ML instances to run the script that computes for the model evaluation metric values. This is just one of the applications and possible use cases of SageMaker Processing as it can also be used in data preparation and feature engineering.\n",
+    "\n",
+    "#### In the previous recipe, we performed the model evaluation step. In this recipe, we will deploy the Linear Learner model to an inference endpoint using the SageMaker Python SDK. What's an inference endpoint? An inference endpoint is a web application endpoint that (1) accepts a set of values as input (for example, x value/s), (2) loads the trained model, (3) uses the trained model to predict a value using the input, and finally, (4) returns the predicted value in the preferred format.\n",
+    "\n",
+    "#### After we have deployed the model, we will test the inference endpoint with a few test predictions using sample management_experience_months values. We should get the corresponding predicted monthly_salary values within a second or less!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sagemaker\n",
+    "\n",
+    "from sagemaker import get_execution_role\n",
+    "\n",
+    "     \n",
+    "\n",
+    "role = get_execution_role()\n",
+    "\n",
+    "session = sagemaker.Session()"
+   ]
   }
  ],
  "metadata": {
