--- a/AWS-Books/ML-Sagemaker-Cook-Book/Getting-Started.ipynb
+++ b/AWS-Books/ML-Sagemaker-Cook-Book/Getting-Started.ipynb
@@ -311,14 +311,42 @@
    "outputs": [],
    "source": [
     "import sagemaker\n",
-    "\n",
     "from sagemaker import get_execution_role\n",
+    "from sagemaker.model import Model\n",
+    "from sagemaker.predictor import Predictor\n",
     "\n",
-    "     \n",
     "\n",
     "role = get_execution_role()\n",
+    "session = sagemaker.Session()\n",
     "\n",
-    "session = sagemaker.Session()"
+    "model = Model(image_uri=model_uri,\n",
+    "              model_data=model_data,\n",
+    "              role=role,\n",
+    "              sagemaker_session=session)\n",
+    "\n",
+    "model.predictor_cls = Predictor\n",
+    "\n",
+    "predictor = model.deploy(\n",
+    "    initial_instance_count=1,\n",
+    "    instance_type='ml.m5.xlarge',\n",
+    "    endpoint_name=\"linear-learner-python\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sagemaker.serializers import CSVSerializer\n",
+    "from sagemaker.deserializers import JSONDeserializer\n",
+    "\n",
+    "predictor.serializer = CSVSerializer()\n",
+    "predictor.deserializer = JSONDeserializer()\n",
+    "\n",
+    "predictor.predict(\"42\")\n",
+    "predictor.predict([\"42\", \"81\"])\n",
+    "predictor.delete_endpoint()"
    ]
   }
  ],
