added new changes

--- a/AWS-Books/ML-Sagemaker-Cook-Book/Getting-Started.ipynb
+++ b/AWS-Books/ML-Sagemaker-Cook-Book/Getting-Started.ipynb
@@ -348,6 +348,39 @@
     "predictor.predict([\"42\", \"81\"])\n",
     "predictor.delete_endpoint()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Invoking an Amazon SageMaker model endpoint with the SageMakerRuntime client from boto3\n",
+    "\n",
+    "#### With our model deployed in an inference endpoint using the SageMaker hosting services, we can now use the SageMakerRuntime client from boto3 to invoke the endpoint. This will help us to invoke the SageMaker inference endpoint within any application code using boto3 or a similar SDK. For example, we can use this in an AWS Lambda function with Amazon API Gateway to build a serverless API endpoint that accepts an HTTP request containing the number of months of management experience of a professional and returns a response with the predicted monthly salary of that individual."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import boto3\n",
+    "import json\n",
+    "\n",
+    "\n",
+    "sagemaker_client = boto3.client('sagemaker-runtime')\n",
+    "endpoint = 'linear-learner-python'\n",
+    "payload=\"42\"\n",
+    "\n",
+    "response = sagemaker_client.invoke_endpoint(\n",
+    "    EndpointName=endpoint,\n",
+    "    ContentType='text/csv',\n",
+    "    Body=payload)\n",
+    "\n",
+    "result = json.loads(\n",
+    "    response['Body'].read().decode('utf-8')\n",
+    ")\n"
+   ]
   }
  ],
  "metadata": {
