--- a/AWS-Books/ML-Sagemaker-Cook-Book/Building-Using-Custom-Algo.ipynb
+++ b/AWS-Books/ML-Sagemaker-Cook-Book/Building-Using-Custom-Algo.ipynb
@@ -38,9 +38,74 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "container=\"581320662326.dkr.ecr.us-east-1.amazonaws.com/chap02_python:1\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from sagemaker.inputs import TrainingInput\n",
     "\n",
     "train = TrainingInput(training_s3_input_location, content_type=\"text/csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "estimator = sagemaker.estimator.Estimator(\n",
+    "    container,\n",
+    "    role, \n",
+    "    instance_count=1, \n",
+    "    base_job_name=\"abcdefghij\",\n",
+    "    instance_type='ml.m5.large',\n",
+    "    output_path=training_s3_output_location,\n",
+    "    sagemaker_session=sagemaker.Session())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "estimator.set_hyperparameters(a=1, b=2, c=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "estimator.fit({'train': train})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictor = estimator.deploy(\n",
+    "    initial_instance_count=1, \n",
+    "    instance_type='ml.t2.medium', \n",
+    "    endpoint_name=\"custom-local-py-endpoint\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictor.predict(\"1\")\n",
+    "predictor.delete_endpoint()"
    ]
   }
  ],
