added new changes

--- a/AWS-Books/ML-Sagemaker-Cook-Book/Building-Using-Custom-Algo.ipynb
+++ b/AWS-Books/ML-Sagemaker-Cook-Book/Building-Using-Custom-Algo.ipynb
@@ -107,6 +107,30 @@
     "predictor.predict(\"1\")\n",
     "predictor.delete_endpoint()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Define the PATHS constant and the get_path() function. The get_path() function will be handy in helping us manage the paths and locations of the primary files and directories used in the script:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PATHS = {\n",
+    "    'hyperparameters': 'input/config/hyperparameters.json',\n",
+    "    'input': 'input/config/inputdataconfig.json',\n",
+    "    'data': 'input/data/',\n",
+    "    'model': 'model/'\n",
+    "}\n",
+    "\n",
+    "def get_path(key):\n",
+    "    return '/opt/ml/' + PATHS[key]"
+   ]
   }
  ],
  "metadata": {
