added new changes

--- a/AWS-Books/ML-Sagemaker-Cook-Book/Building-Using-Custom-Algo.ipynb
+++ b/AWS-Books/ML-Sagemaker-Cook-Book/Building-Using-Custom-Algo.ipynb
@@ -121,6 +121,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "\n",
+    "from flask import Flask\n",
+    "from flask import Response\n",
+    "from flask import request\n",
+    "\n",
+    "from joblib import dump, load\n",
+    "app = Flask(__name__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "PATHS = {\n",
     "    'hyperparameters': 'input/config/hyperparameters.json',\n",
     "    'input': 'input/config/inputdataconfig.json',\n",
@@ -130,6 +146,51 @@
     "\n",
     "def get_path(key):\n",
     "    return '/opt/ml/' + PATHS[key]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_json(target_file):\n",
+    "  output = None\n",
+    "  with open(target_file) as json_data:\n",
+    "    output = json.load(json_data)\n",
+    "\n",
+    "  return output\n",
+    "\n",
+    "def print_json(target_json):\n",
+    "  pprint.pprint(target_json, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@app.route(\"/invocations\", methods=[\"POST\"])\n",
+    "def predict():\n",
+    "    model = load_model()\n",
+    "    \n",
+    "    post_body = request.get_data().decode(\"utf-8\")\n",
+    "    \n",
+    "    payload_value = float(post_body)\n",
+    "    \n",
+    "    X_test = np.array([payload_value]).reshape(-1, 1)\n",
+    "    y_test = model.predict(X_test)\n",
+    "    \n",
+    "    return Response(response=str(y_test[0]), status=200)\n",
+    "\n",
+    "\n",
+    "@app.route(\"/ping\")\n",
+    "def ping():\n",
+    "    return Response(response=\"OK\", status=200)\n",
+    "\n",
+    "\n",
+    "app.run(host=\"0.0.0.0\", port=8080)"
    ]
   }
  ],
