added new notes

--- a/AWS-Books/SageMaker-Best-Practices/Sagemaker-Overview.ipynb
+++ b/AWS-Books/SageMaker-Best-Practices/Sagemaker-Overview.ipynb
@@ -10,7 +10,23 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## SageMaker Ground Truth\n",
+    "\n",
+    "#### Obtaining labeled data for classification, regression, and other tasks is often the biggest barrier to ML projects, as many companies have a lot of data but have not explicitly labeled it according to business properties such as anomalous and high lifetime value. SageMaker Ground Truth helps you systematically label data by defining a labeling workflow and assigning labeling tasks to a human workforce.\n",
+    "\n",
+    "## SageMaker Data Wrangler\n",
+    "\n",
+    "#### Data Wrangler helps you understand your data and perform feature engineering. Data Wrangler works with data stored in S3 (optionally accessed via Athena) and Redshift and performs typical visualization and transformations, such as correlation plots and categorical encoding. You can combine a series of transformations into a data flow and export that flow into an MLOps pipeline. The following screenshot shows an example of Data Wrangler information for a dataset:\n",
+    "\n",
+    "## SageMaker Processing\n",
+    "\n",
+    "#### SageMaker Processing jobs help you run data processing and feature engineering tasks on your datasets. By providing your own Docker image containing your code, or using a pre-built Spark or sklearn container, you can normalize and transform data to prepare your features. The following diagram shows the logical flow of a SageMaker Processing job:\n",
+    "\n",
+    "## SageMaker Feature Store\n",
+    "\n",
+    "#### SageMaker Feature Store helps you organize and share your prepared features. Using a feature store improves quality and saves time by letting you reuse features rather than duplicate complex feature engineering code and computations that have already been done. Feature Store supports both batch and stream storage and retrieval. The following screenshot shows an example of feature group information:"
+   ]
   }
  ],
  "metadata": {
